MDEV-9935: Window functions: assertion failure with empty OVER () clause

Make window functions work with an empty over clause by forcing
a sort on the first column of the current join_tab. This is a temporary
fix until we get window functions to work with big tables.