sql/sql_window.h
@@ -186,7 +186,8 @@ private:
 class Window_funcs_sort : public Sql_alloc
 {
 public:
-  bool setup(THD *thd, SQL_SELECT *sel, List_iterator<Item_window_func> &it);
+  bool setup(THD *thd, SQL_SELECT *sel, List_iterator<Item_window_func> &it,
+             st_join_table *join_tab);
   bool exec(JOIN *join);
   void cleanup() { delete filesort; }
 
